# cpp-rest

./: CMakeLists.txt  Dockerfile  README.md
dbml/: rest_db.dbml
openapi/: openapi.yaml
queries/: create_db.sql  device_location.sql  devices.sql  insertions.sql  locations.sql
queries/start_query/: create_db.sql
src/: main.cpp  sql.cpp
src/Device_Manager/: Device_Manager.cpp  Device_Manager.hpp
src/Location_Manager/: Location_Manager.cpp  Location_Manager.hpp
src/Rest_Server/: Rest_Server.cpp  Rest_Server.hpp
src/SQL_Client/: SQL_Client.cpp  SQL_Client.hpp
